--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,4 @@
 [build]
     command = "npm run build"
-    targetProp = "3005"
     functions = "netlify/functions"
-    publish = "public"
+    publish = "build"
